# htmx-client-side-template-example

./: Cargo.toml
assets/css/: ldbutton.css  main.css
assets/js/: client-side-templates.js  nunjucks.min.js
src/: counter.rs  include_ext.rs  main.rs  stop_signal.rs
templates/: index.jinja  qrcode.jinja
